--- a/index.html
+++ b/index.html
@@ -2,33 +2,26 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>[영상 제목]</title>
+    <title>Lofi Hip Hop Radio 📚 - Beats to Relax/Study to</title>
 
     <meta property="og:type" content="video.other">
-    <meta property="og:title" content="[영상 제목]">
-    <meta property="og:description" content="[영상 설명]">
-    <meta property="og:image" content="https://i.ytimg.com/vi/[영상 ID]/maxresdefault.jpg">
-    <meta property="og:video:url" content="https://www.youtube.com/embed/[영상 ID]">
-    <meta property="og:video:secure_url" content="https://www.youtube.com/embed/[영상 ID]">
+    <meta property="og:title" content="Lofi Hip Hop Radio 📚 - Beats to Relax/Study to">
+    <meta property="og:description" content="Thank you for listening, I hope you will have a good time here | Listen to the radio on Spotify, Apple music and more">
+    <meta property="og:image" content="https://i.ytimg.com/vi/jfKfPfyJRdk/maxresdefault.jpg">
+    <meta property="og:video:url" content="https://www.youtube.com/embed/jfKfPfyJRdk">
+    <meta property="og:video:secure_url" content="https://www.youtube.com/embed/jfKfPfyJRdk">
     <meta property="og:video:type" content="text/html">
     <meta property="og:video:width" content="1280">
     <meta property="og:video:height" content="720">
 
-    <meta name="twitter:card" content="player">
-    <meta name="twitter:player" content="https://www.youtube.com/embed/[영상 ID]">
-    <meta name="twitter:player:width" content="1280">
-    <meta name="twitter:player:height" content="720">
-    <meta name="twitter:image" content="https://i.ytimg.com/vi/[영상 ID]/maxresdefault.jpg">
-    <meta name="twitter:title" content="[영상 제목]">
-    <meta name="twitter:description" content="[영상 설명]">
 </head>
 <body>
-    <h1>영상 공유 페이지</h1>
-    <p>이 페이지의 URL을 공유하면 지정된 YouTube 영상의 미리보기가 표시됩니다.</p>
+    <h1>Lofi Hip Hop Radio 📚 - Beats to Relax/Study to</h1>
+    <p>이 페이지의 URL을 공유하면 아래 YouTube 영상의 미리보기가 표시됩니다.</p>
     <iframe 
         width="560" 
         height="315" 
-        src="https://www.youtube.com/embed/[영상 ID]" 
+        src="https://www.youtube.com/embed/jfKfPfyJRdk" 
         title="YouTube video player" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
