--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Lofi Hip Hop Radio 📚 - Beats to Relax/Study to</title>
 
+
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=jfKfPfyJRdk">
+
+
     <meta property="og:type" content="video.other">
     <meta property="og:title" content="Lofi Hip Hop Radio 📚 - Beats to Relax/Study to">
     <meta property="og:description" content="Thank you for listening, I hope you will have a good time here | Listen to the radio on Spotify, Apple music and more">
@@ -13,19 +17,8 @@
     <meta property="og:video:type" content="text/html">
     <meta property="og:video:width" content="1280">
     <meta property="og:video:height" content="720">
-
 </head>
 <body>
-    <h1>Lofi Hip Hop Radio 📚 - Beats to Relax/Study to</h1>
-    <p>이 페이지의 URL을 공유하면 아래 YouTube 영상의 미리보기가 표시됩니다.</p>
-    <iframe 
-        width="560" 
-        height="315" 
-        src="https://www.youtube.com/embed/jfKfPfyJRdk" 
-        title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-    </iframe>
+    <p>YouTube로 이동 중입니다...</p>
 </body>
 </html>
