--- a/index.html
+++ b/index.html
@@ -2,23 +2,10 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Lofi Hip Hop Radio 📚 - Beats to Relax/Study to</title>
-
-
+    <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=jfKfPfyJRdk">
-
-
-    <meta property="og:type" content="video.other">
-    <meta property="og:title" content="Lofi Hip Hop Radio 📚 - Beats to Relax/Study to">
-    <meta property="og:description" content="Thank you for listening, I hope you will have a good time here | Listen to the radio on Spotify, Apple music and more">
-    <meta property="og:image" content="https://i.ytimg.com/vi/jfKfPfyJRdk/maxresdefault.jpg">
-    <meta property="og:video:url" content="https://www.youtube.com/embed/jfKfPfyJRdk">
-    <meta property="og:video:secure_url" content="https://www.youtube.com/embed/jfKfPfyJRdk">
-    <meta property="og:video:type" content="text/html">
-    <meta property="og:video:width" content="1280">
-    <meta property="og:video:height" content="720">
 </head>
 <body>
-    <p>YouTube로 이동 중입니다...</p>
+    <p>이동 중...</p>
 </body>
 </html>
